--- a/Art_Gallery/templates/usa_thankyou_email.html
+++ b/Art_Gallery/templates/usa_thankyou_email.html
@@ -11,37 +11,36 @@ English below 👇
 
 購入したアイテム: {{japanese_painting_name}}
 
-商品の小計： ¥{{jpy_price}}
+商品の小計： ${{usd_price}}
 
-配送料・手数料： ¥{{jpy_shipping_price}}
+配送料・手数料： ${{usd_shipping_price}}
 
-合計：¥{{jpy_total_price_paid}}
+合計：${{usd_total_price_paid}}
 
-注文番号: {{orderId}}
+注文番号: {{orderId}} 
 (ご注文番号をお控え下さいますようお願いいたします。万が一トラブルなどがあった場合に、この注文番号が必要となります。)
-
 
 
 配送に関する情報:
 
 
-絵画は日本郵便で発送されます。支払い後、絵を梱包して発送するまで、土日祝日を
-除く最大 2 日かかります。ご購入の絵画の発送が完了後、日本郵便の追跡番号をメー
-ルでお知らせします。荷物の追跡に使用できる日本郵便のウェブサイトは次のとおり
-です:
+私たちは、日本の郵便サービス「日本郵便」を介して、日本から米国に絵画を発送し
+ます。支払い後、絵を梱包して発送するまで、土日祝日を除く最大 2 日かかります。
+ご注文の絵の発送が完了次第、日本郵便の追跡番号をEメールでお知らせします。荷物の追跡に使
+用できる日本郵便のウェブサイトは次のとおりです:
 https://trackings.post.japanpost.jp/services/srv/sequenceNoSearch/input?locale=en
 
-絵画が届くまで最大 2 週間かかります。                     
+絵画が届くまで最大 5 週間かかります。
 
 
 払い戻し・キャンセルのお知らせ:
 
 
-お客様は、絵画が配送先住所に正常に配送されてから 10 間日以内であれば、理由の如
+お客様は、絵画が配送先住所に正常に配送されてから 10 日間以内であれば、理由の如
 何を問わず返品返金を受ける権利を有します。ご入金後、速やかにメール便にて発送
 いたしますので、キャンセルが間に合わない場合がございます。注文をキャンセルし
 たい場合は、Eメールで送信されたkaoruartgallery@gmail.comからすぐにご連絡ください。
-尚、10間日以降のキャンセル、返金は承りませんので、ご了承お願い致します。
+尚、10日間以降のキャンセル、返金は承りませんので、ご了承お願い致します。
 
 
 キャンセル・返品など、ご注文に関するご質問やご不明な点がございましたら、
@@ -69,28 +68,28 @@ Order detials:
 
 Painting purchased: {{english_painting_name}}
 
-Painting Price: ¥{{jpy_price}}
+Painting Price: ${{usd_price}}
 
-Shipping/Handling: ¥{{jpy_shipping_price}}
+Shipping/Handling: ${{usd_shipping_price}}
 
-Total amount paid: ¥{{jpy_total_price_paid}}
+Total amount paid: ${{usd_total_price_paid}}
 
 Order number: {{orderId}}
 (Please keep your order number somewhere safe as it will be used to verify you and your purchase if there are any problems with your order.)
 
 
-
 Delivery Details:
 
 
-We ship our paintings via Japan Post. Please allow up to two days excluding 
-weekends and holidays for your painting to be packaged and sent after 
-payment. For your convenience, we will email you the Japan Post tracking 
-number for your painting as soon as we send it in the mail. Here is the 
-Japan Post website that you can use to track your package:
+We ship our paintings to the United States from Japan via the Japanese 
+postal service, Japan Post. Please allow up to two days excluding weekends 
+and holidays for your painting to be packaged and sent after payment. For 
+your convenience, we will email you the Japan Post tracking number for your 
+painting as soon as we send it in the mail. Here is the Japan Post website 
+that you can use to track your package:
 https://trackings.post.japanpost.jp/services/srv/sequenceNoSearch/input?locale=en
 
-Please allow up to two weeks for your painting to be delivered to your address.
+Please allow up to 5 weeks for your painting to arrive.
 
 
 Refund/Cancellation Policy:
@@ -108,7 +107,7 @@ days.
 
 
 If you have any questions or concerns regarding your order, including cancellation/refund inquiries,
-please do not hesitate to reach out to me at kaoruartgallery@gmail.com.
+or if you just want to say hi, please do not hesitate to reach out to me at kaoruartgallery@gmail.com.
 
 
 Thank you again for your support and I hope you continue enjoying my Art Gallery!
